--- a/scss/main/_experience.scss
+++ b/scss/main/_experience.scss
@@ -1,5 +1,15 @@
 .right-side {
   .internship-block {
+    margin-bottom: 25px;
+    border-bottom: 1px solid $lightGrey1;
+    // No divider line
+    &:last-child {
+      margin-bottom: 0;
+      border-bottom: none;
+      p, .circles-box {
+        padding-bottom: 0;
+      }
+    }
     .flex-box {
       @include flex-property(flex-start, center);
       margin-bottom: 10px;
@@ -18,9 +28,7 @@
       @extend %grey-paragraph;
       font-style: italic;
       margin-top: 15px;
+      padding-bottom: 25px;
     }
-  } 
-  .divider-line {
-    margin: 25px 0;
-  } 
+  }
 }
