--- a/scss/main/_general.scss
+++ b/scss/main/_general.scss
@@ -15,13 +15,6 @@ body {
   color: $blue; 
 }
 
-.divider-line {
-  width: 100%;
-  height: 0.5px;
-  background-color: $grey;
-  opacity: 0.25;
-}
-
 .st0 {
   fill: none;
 }
