--- a/scss/main/_skills.scss
+++ b/scss/main/_skills.scss
@@ -1,4 +1,5 @@
 #skills, #experience, #education, #languages {
+  border-top: 1px solid $lightGrey1;
   .info-block {
     align-items: flex-start;
     position: relative;
@@ -38,6 +39,12 @@
     display: flex;
     &:first-child {
       margin-bottom: 25px;
+      .skills-box {
+        border-bottom: 1px solid $lightGrey1;
+        p {
+          padding-bottom: 25px;
+        }
+      }
     }
     .skills-box {
       width: 365px;
@@ -50,9 +57,6 @@
       }
       p {
         @extend %grey-paragraph;
-      }
-      .divider-line {
-        margin-top: 25px;
       }
     }
   }
